Fix menu to the top of the screen with hamburger menu in it as per Trello ticket #327
The header wasn't sticking to the top, and the hamburger menu wasn't sitting inside of it either. This fixes that. It also fixes a resulting issue, where form fields were covering the navbar as you scrolled past them.

--- a/web/app/themes/brookhouse/assets/css/header.css
+++ b/web/app/themes/brookhouse/assets/css/header.css
@@ -2,6 +2,7 @@
     background-color: #666666;
     height: 29px;
     width: 100%;
+    position: fixed;
 }
 
 #topbar > div {
@@ -182,4 +183,3 @@
         padding: 25px 100px 35px;
     }
 }
-
